<resources>
    <string name="app_name">To Do List</string>
    <string name="lbl_todos">Tarefas</string>
    <string name="lbl_title">Título</string>
    <string name="lbl_Date">Data</string>
    <string name="lbl_hour">Hora</string>
    <string name="lbl_create_task">Criar Tarefa</string>
    <string name="lbl_cancel">Cancelar</string>
    <string name="descriptionNewTask">Adicionar nova tarefa</string>
    <string name="op_description">Opções</string>
    <string name="lbl_edit">Editar</string>
    <string name="lbl_delete">Deletar</string>
    <string name="lbl_update_task">Atualizar Tarefa</string>
    <string name="lbl_empty_state">Ops! Você ainda não possui\n nenhuma tarefa</string>
    <string name="lbl_observation">Observação</string>
    <string name="lbl_detail">Detalhado</string>
</resources>