<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mtb_add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:title="@string/lbl_detail"
        app:navigationIcon="@drawable/ic_baseline_navigate_before_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="32dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_titulo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/mtb_add_task"
        android:layout_marginTop="16dp"
        android:hint="@string/lbl_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_titulo"
            android:inputType="text"
            android:focusable="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_Date"
        app:startIconDrawable="@drawable/ic_baseline_calendar_today_24"
        app:layout_constraintEnd_toStartOf="@+id/til_hour"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/til_titulo"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_hour"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/lbl_hour"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toEndOf="@+id/til_date"
        app:layout_constraintTop_toTopOf="@+id/til_date"
        app:startIconDrawable="@drawable/ic_baseline_access_time_24">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_observation"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="95dp"
        android:hint="@string/lbl_observation"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guide_end"
        app:layout_constraintStart_toStartOf="@+id/guide_start"
        app:layout_constraintTop_toBottomOf="@+id/til_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txt_observation"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:focusable="false"
            android:inputType="textMultiLine" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>